--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "tauri": "tauri"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +21,8 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@tauri-apps/api": "^1.3.0",
+    "@tauri-apps/cli": "^1.3.1",
     "bootstrap": "^5.1.3",
     "chart.js": "^4.3.0",
     "ng2-charts": "^4.1.1",
